src/test/ui/feature-gates/feature-gate-try_blocks.stderr
error[E0658]: `try` expression is experimental
  --> $DIR/feature-gate-try_blocks.rs:4:33
   |
LL |       let try_result: Option<_> = try {
   |  _________________________________^
LL | |         let x = 5;
LL | |         x
LL | |     };
   | |_____^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/31436
   = help: add #![feature(try_blocks)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
